Logic/SpellCreator/SpellCreatorParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from .\SpellCreator.g4 by ANTLR 4.9.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.1")]
[System.CLSCompliant(false)]
public partial class SpellCreatorParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		FIRESOME=1, FROZEN=2, STORMFUL=3, LIFE=4, RESISTANCE=5, SPEED=6, PROJECTILE=7, 
		AREA=8, SELF=9, INSTANT=10, IMPULSE=11, CHASE=12, FALL=13, PARENT=14, 
		DESTROY=15, RICOCHET=16, MULTIPLE=17, ADJECTIVE=18, SIGN=19, WISE=20, 
		WS=21, CONNECTOR=22;
	public const int
		RULE_spell = 0, RULE_element = 1, RULE_fire = 2, RULE_ice = 3, RULE_shock = 4, 
		RULE_effect = 5, RULE_life = 6, RULE_resistance = 7, RULE_speed = 8, RULE_shape = 9, 
		RULE_projectile = 10, RULE_area = 11, RULE_self = 12, RULE_demeanour = 13, 
		RULE_instant = 14, RULE_impulse = 15, RULE_chase = 16, RULE_fall = 17, 
		RULE_parent = 18, RULE_impact = 19, RULE_destroy = 20, RULE_ricochet = 21, 
		RULE_multiple = 22, RULE_connector = 23;
	public static readonly string[] ruleNames = {
		"spell", "element", "fire", "ice", "shock", "effect", "life", "resistance", 
		"speed", "shape", "projectile", "area", "self", "demeanour", "instant", 
		"impulse", "chase", "fall", "parent", "impact", "destroy", "ricochet", 
		"multiple", "connector"
	};

	private static readonly string[] _LiteralNames = {
		null, "'FIRESOME'", "'FROZEN'", "'STORMFUL'", "'LIFE'", "'RESISTANCE'", 
		"'SPEED'", "'PROJECTILE'", "'AREA'", "'SELF'", "'INSTANT'", "'IMPULSE'", 
		"'CHASE'", "'FALL'", "'PARENT'", "'DESTROY'", "'RICOCHET'", "'MULTIPLE'", 
		null, null, "'WISE'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "FIRESOME", "FROZEN", "STORMFUL", "LIFE", "RESISTANCE", "SPEED", 
		"PROJECTILE", "AREA", "SELF", "INSTANT", "IMPULSE", "CHASE", "FALL", "PARENT", 
		"DESTROY", "RICOCHET", "MULTIPLE", "ADJECTIVE", "SIGN", "WISE", "WS", 
		"CONNECTOR"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SpellCreator.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static SpellCreatorParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SpellCreatorParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SpellCreatorParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class SpellContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ElementContext element() {
			return GetRuleContext<ElementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ShapeContext shape() {
			return GetRuleContext<ShapeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(SpellCreatorParser.Eof, 0); }
		public SpellContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_spell; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.EnterSpell(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.ExitSpell(this);
		}
	}

	[RuleVersion(0)]
	public SpellContext spell() {
		SpellContext _localctx = new SpellContext(Context, State);
		EnterRule(_localctx, 0, RULE_spell);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48;
			element();
			State = 49;
			shape();
			State = 51;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				{
				State = 50;
				Match(Eof);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public EffectContext effect() {
			return GetRuleContext<EffectContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FireContext fire() {
			return GetRuleContext<FireContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IceContext ice() {
			return GetRuleContext<IceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ShockContext shock() {
			return GetRuleContext<ShockContext>(0);
		}
		public ElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_element; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.EnterElement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.ExitElement(this);
		}
	}

	[RuleVersion(0)]
	public ElementContext element() {
		ElementContext _localctx = new ElementContext(Context, State);
		EnterRule(_localctx, 2, RULE_element);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case FIRESOME:
				{
				State = 53;
				fire();
				}
				break;
			case FROZEN:
				{
				State = 54;
				ice();
				}
				break;
			case STORMFUL:
				{
				State = 55;
				shock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 58;
			effect();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FireContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FIRESOME() { return GetToken(SpellCreatorParser.FIRESOME, 0); }
		public FireContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fire; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.EnterFire(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.ExitFire(this);
		}
	}

	[RuleVersion(0)]
	public FireContext fire() {
		FireContext _localctx = new FireContext(Context, State);
		EnterRule(_localctx, 4, RULE_fire);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 60;
			Match(FIRESOME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FROZEN() { return GetToken(SpellCreatorParser.FROZEN, 0); }
		public IceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ice; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.EnterIce(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.ExitIce(this);
		}
	}

	[RuleVersion(0)]
	public IceContext ice() {
		IceContext _localctx = new IceContext(Context, State);
		EnterRule(_localctx, 6, RULE_ice);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62;
			Match(FROZEN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ShockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STORMFUL() { return GetToken(SpellCreatorParser.STORMFUL, 0); }
		public ShockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.EnterShock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.ExitShock(this);
		}
	}

	[RuleVersion(0)]
	public ShockContext shock() {
		ShockContext _localctx = new ShockContext(Context, State);
		EnterRule(_localctx, 8, RULE_shock);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 64;
			Match(STORMFUL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EffectContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LifeContext life() {
			return GetRuleContext<LifeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ResistanceContext resistance() {
			return GetRuleContext<ResistanceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SpeedContext speed() {
			return GetRuleContext<SpeedContext>(0);
		}
		public EffectContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_effect; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.EnterEffect(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.ExitEffect(this);
		}
	}

	[RuleVersion(0)]
	public EffectContext effect() {
		EffectContext _localctx = new EffectContext(Context, State);
		EnterRule(_localctx, 10, RULE_effect);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				{
				State = 66;
				life();
				}
				break;
			case 2:
				{
				State = 67;
				resistance();
				}
				break;
			case 3:
				{
				State = 68;
				speed();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LifeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LIFE() { return GetToken(SpellCreatorParser.LIFE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SIGN() { return GetToken(SpellCreatorParser.SIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WISE() { return GetToken(SpellCreatorParser.WISE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ADJECTIVE() { return GetTokens(SpellCreatorParser.ADJECTIVE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ADJECTIVE(int i) {
			return GetToken(SpellCreatorParser.ADJECTIVE, i);
		}
		public LifeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_life; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.EnterLife(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.ExitLife(this);
		}
	}

	[RuleVersion(0)]
	public LifeContext life() {
		LifeContext _localctx = new LifeContext(Context, State);
		EnterRule(_localctx, 12, RULE_life);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WISE) {
				{
				State = 71;
				Match(WISE);
				}
			}

			State = 75;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				{
				State = 74;
				Match(ADJECTIVE);
				}
				break;
			}
			State = 78;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ADJECTIVE) {
				{
				State = 77;
				Match(ADJECTIVE);
				}
			}

			State = 80;
			Match(LIFE);
			State = 81;
			Match(SIGN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ResistanceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RESISTANCE() { return GetToken(SpellCreatorParser.RESISTANCE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SIGN() { return GetToken(SpellCreatorParser.SIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WISE() { return GetToken(SpellCreatorParser.WISE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ADJECTIVE() { return GetTokens(SpellCreatorParser.ADJECTIVE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ADJECTIVE(int i) {
			return GetToken(SpellCreatorParser.ADJECTIVE, i);
		}
		public ResistanceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_resistance; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.EnterResistance(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.ExitResistance(this);
		}
	}

	[RuleVersion(0)]
	public ResistanceContext resistance() {
		ResistanceContext _localctx = new ResistanceContext(Context, State);
		EnterRule(_localctx, 14, RULE_resistance);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WISE) {
				{
				State = 83;
				Match(WISE);
				}
			}

			State = 87;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				{
				State = 86;
				Match(ADJECTIVE);
				}
				break;
			}
			State = 90;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ADJECTIVE) {
				{
				State = 89;
				Match(ADJECTIVE);
				}
			}

			State = 92;
			Match(RESISTANCE);
			State = 93;
			Match(SIGN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SpeedContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SPEED() { return GetToken(SpellCreatorParser.SPEED, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SIGN() { return GetToken(SpellCreatorParser.SIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WISE() { return GetToken(SpellCreatorParser.WISE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ADJECTIVE() { return GetTokens(SpellCreatorParser.ADJECTIVE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ADJECTIVE(int i) {
			return GetToken(SpellCreatorParser.ADJECTIVE, i);
		}
		public SpeedContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_speed; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.EnterSpeed(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.ExitSpeed(this);
		}
	}

	[RuleVersion(0)]
	public SpeedContext speed() {
		SpeedContext _localctx = new SpeedContext(Context, State);
		EnterRule(_localctx, 16, RULE_speed);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WISE) {
				{
				State = 95;
				Match(WISE);
				}
			}

			State = 99;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,10,Context) ) {
			case 1:
				{
				State = 98;
				Match(ADJECTIVE);
				}
				break;
			}
			State = 102;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ADJECTIVE) {
				{
				State = 101;
				Match(ADJECTIVE);
				}
			}

			State = 104;
			Match(SPEED);
			State = 105;
			Match(SIGN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ShapeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ConnectorContext connector() {
			return GetRuleContext<ConnectorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ProjectileContext projectile() {
			return GetRuleContext<ProjectileContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AreaContext area() {
			return GetRuleContext<AreaContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SelfContext self() {
			return GetRuleContext<SelfContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DemeanourContext demeanour() {
			return GetRuleContext<DemeanourContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImpactContext impact() {
			return GetRuleContext<ImpactContext>(0);
		}
		public ShapeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shape; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.EnterShape(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.ExitShape(this);
		}
	}

	[RuleVersion(0)]
	public ShapeContext shape() {
		ShapeContext _localctx = new ShapeContext(Context, State);
		EnterRule(_localctx, 18, RULE_shape);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			connector();
			State = 111;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,12,Context) ) {
			case 1:
				{
				State = 108;
				projectile();
				}
				break;
			case 2:
				{
				State = 109;
				area();
				}
				break;
			case 3:
				{
				State = 110;
				self();
				}
				break;
			}
			State = 114;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,13,Context) ) {
			case 1:
				{
				State = 113;
				demeanour();
				}
				break;
			}
			State = 117;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==CONNECTOR) {
				{
				State = 116;
				impact();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProjectileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROJECTILE() { return GetToken(SpellCreatorParser.PROJECTILE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ADJECTIVE() { return GetToken(SpellCreatorParser.ADJECTIVE, 0); }
		public ProjectileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_projectile; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.EnterProjectile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.ExitProjectile(this);
		}
	}

	[RuleVersion(0)]
	public ProjectileContext projectile() {
		ProjectileContext _localctx = new ProjectileContext(Context, State);
		EnterRule(_localctx, 20, RULE_projectile);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 120;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ADJECTIVE) {
				{
				State = 119;
				Match(ADJECTIVE);
				}
			}

			State = 122;
			Match(PROJECTILE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AreaContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AREA() { return GetToken(SpellCreatorParser.AREA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ADJECTIVE() { return GetToken(SpellCreatorParser.ADJECTIVE, 0); }
		public AreaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_area; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.EnterArea(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.ExitArea(this);
		}
	}

	[RuleVersion(0)]
	public AreaContext area() {
		AreaContext _localctx = new AreaContext(Context, State);
		EnterRule(_localctx, 22, RULE_area);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 125;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ADJECTIVE) {
				{
				State = 124;
				Match(ADJECTIVE);
				}
			}

			State = 127;
			Match(AREA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SelfContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SELF() { return GetToken(SpellCreatorParser.SELF, 0); }
		public SelfContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_self; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.EnterSelf(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.ExitSelf(this);
		}
	}

	[RuleVersion(0)]
	public SelfContext self() {
		SelfContext _localctx = new SelfContext(Context, State);
		EnterRule(_localctx, 24, RULE_self);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 129;
			Match(SELF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DemeanourContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ConnectorContext connector() {
			return GetRuleContext<ConnectorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InstantContext instant() {
			return GetRuleContext<InstantContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImpulseContext impulse() {
			return GetRuleContext<ImpulseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ChaseContext chase() {
			return GetRuleContext<ChaseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FallContext fall() {
			return GetRuleContext<FallContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParentContext parent() {
			return GetRuleContext<ParentContext>(0);
		}
		public DemeanourContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_demeanour; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.EnterDemeanour(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISpellCreatorListener typedListener = listener as ISpellCreatorListener;
			if (typedListener != null) typedListener.ExitDemeanour(this);
		}
	}
